Таблет Иконка для смарта полностью серой (см. телеграм) Выравниваем менюшку по темплейту (размещение кнопки меню, белая линия) Прячим полностью серые края Подправить титул, чтобы был по центру анимации (см. телеграм) Read more кнопку делаем больше (см. темплейт) Опускаем картинки We are CoinJapan после текста и кнопки Убираем воздух в конце каждой секции хотя бы на 50% Цифры в Achievements делаем меньше Разделители не убираем в Achievements Воздух между датой и категорией в новостях Название статьи в новостях до самого предела страницы Сделать меньше лого партнеров Лого партнеров 2 х 2 Между лого партнеров больше воздуха

--- a/css/header.css
+++ b/css/header.css
@@ -19,6 +19,18 @@
 	align-items: center;
 }
 
+@media all and (max-width: 1024px){
+	.header{
+		
+		height: 100px;
+		background-color: #fff;
+	}
+	.header-container{
+		width: 100%;
+		padding: 0 3%
+	}
+}
+
 @media all and (min-width: 1400px){
 	.header-container {
 		width: 1400px;
