--- a/css/home.css
+++ b/css/home.css
@@ -134,7 +134,7 @@ table {
     padding-left: 10px;
     margin-bottom: 20px;
     font-size: 20px;
-    height: 20px;
+    height: 18px;
     line-height: 20px;
     border-left: 4px #e30808 solid;
     font-family: 'Helvetica Neue Cyr Bold';
@@ -210,8 +210,10 @@ table {
     flex-direction: column;
     font-size: 50px;
     line-height: 60px;
-   padding-left: 1%;
+    padding-left: 1%;
 }
+
+
 
 @media all and (min-width: 999px) {
 
@@ -220,7 +222,6 @@ table {
         line-height: 56px;
         text-align: left;
         margin-top: 0%;
-
     }
 
 }
@@ -232,7 +233,7 @@ table {
         text-align: center;
         margin-top: -4%;
         align-items: center;
-          padding-left: 2%;
+        padding-left: 2%;
     }
 }
 
@@ -247,8 +248,7 @@ table {
 }
 
 .icon-scroll {
-    margin-left: -20px;
-    bottom: 10%;
+    bottom: 5%;
     margin-top: -25px;
     box-shadow: inset 0 0 0 1px #acafb1;
     border-radius: 25px;
@@ -351,6 +351,21 @@ table {
 
 }
 
+@media all and (max-width:680px){
+    .home-title h1 {
+        font-size: 27px;
+        line-height: 30px;
+        margin-top: 0%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .home-title h1 span{
+        text-align: center;
+    }
+
+}
+
 /*
 ============================================
 ████──████───████──█─█──███
@@ -400,6 +415,7 @@ table {
 .about-us-slider-next {
     width: 50%;
     display: block;
+
 }
 
 .about-us-slider {
@@ -420,8 +436,11 @@ table {
     line-height: 26px;
 }
 
-.about-us-content .section-header {
-    margin-bottom: 50px;
+
+
+#mainSlider{
+    height: 450px;
+    overflow: hidden;
 }
 
 .slide-controls-box {
@@ -445,6 +464,10 @@ table {
     padding-bottom: 30px;
 }
 
+.about-us-content .section-header {
+    margin-bottom: 50px;
+}
+
 @media all and (min-width: 1026px) {
 
     .home-about-us .cj-container {
@@ -462,6 +485,21 @@ table {
         padding-right: 0;
     }
 
+}
+
+@media all and (max-width:680px){
+    #mainSlider{
+        height: auto;
+        overflow: hidden;
+    }
+
+    .about-us-content .section-header{
+        margin-bottom: 10px;
+    }
+
+    .home-about-us .cj-container{
+        padding-bottom: 80px;
+    }
 }
 
 /*
@@ -562,16 +600,6 @@ p.partners-number-medium {
     }
 }
 
-.project-item:nth-child(3) {
-    border-bottom: #e1dede solid 1px;
-}
-
-.project-item h3 {
-    font-family: 'Helvetica Neue Cyr Bold';
-    font-size: 14px;
-    line-height: 80px;
-    margin-bottom: 0;
-}
 
 .success-ico-color {
     background: linear-gradient(90deg, #b0010b 50%, #b0010b 50%, #f8292d);
@@ -580,21 +608,65 @@ p.partners-number-medium {
     color: #f8292d;
 }
 
-@media all and (min-width: 720px) {
+@media all and (min-width:680px){
+    .project-item h3 {
+        font-family: 'Helvetica Neue Cyr Bold';
+        font-size: 14px;
+        line-height: 80px;
+        margin-bottom: 0;
+    }
+
+}
+
+@media all and (max-width:680px) {
+
+    .project-item{
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 15px;
+        padding-top: 15px;
+        border-top: #e1dede solid 1px;
+    }
+    .project-item p {
+        font-family: 'Helvetica Neue Cyr Bold';
+        font-size: 25px;
+        line-height: 25px;
+        margin-bottom: 0;
+        text-align: center;
+    }
 
     .project-items {
         width: 90%;
         margin-left: 1%;
     }
 
-    .project-item:last-child {
-        border-bottom: none;
-    }
+
 
     .project-item h3 {
         font-size: 17px;
         text-align: center;
-        height: 100px;
+        height: 25px;
+        margin-bottom: 0;
+    }
+
+    .project-item-middle{
+         border-left: none;
+        border-right: none;
+    }
+
+    .partners-number-medium{
+        font-size: 25px;
+        height: 25px;
+    }
+
+    .partners-number-medium span{
+        display: inline-block;
+        font-size: 25px;
+        height: 25px;
+    }
+
+    .project-item:last-child {
+        border-bottom: #e1dede solid 1px;
     }
 
 }
@@ -720,6 +792,12 @@ p.partners-number-medium {
 
 }
 
+@media all and (max-width:680px){
+     .news-item {
+        padding-bottom: 10px;
+    }
+}
+
 /*
 ============================================
 ████──████──████──███──█──█──███──████──███
@@ -750,9 +828,9 @@ p.partners-number-medium {
 
 @media all and (min-width: 1025px) {
 
-     .home-partners .cj-container {
-        padding-bottom: 180px;
-    }
+   .home-partners .cj-container {
+    padding-bottom: 180px;
+}
 
 }
 
