--- a/css/home.css
+++ b/css/home.css
@@ -79,7 +79,6 @@ table {
     justify-content: center;
 }
 
-
 .cj-btn {
     margin: 30px 0;
 }
@@ -212,8 +211,6 @@ table {
     line-height: 60px;
     padding-left: 1%;
 }
-
-
 
 @media all and (min-width: 999px) {
 
@@ -352,19 +349,70 @@ table {
 
 }
 
-@media all and (max-width:680px){
+@media all and (max-width: 680px) {
+
     .home-title h1 {
         font-size: 27px;
         line-height: 30px;
-        margin-top: 0%;
+        margin-top: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .home-title h1 span{
+
+    .home-title h1 span {
         text-align: center;
     }
 
+    .icon-scroll {
+        height: 50px;
+        border-radius: 4px;
+        width: 24px;
+    }
+
+    .icon-scroll:after {
+        content: '';
+        display: block;
+        width: 7px;
+        height: 7px;
+        margin: 1px auto 0 auto;
+        border: 1px solid #acafb1;
+        border-radius: 50%;
+    }
+
+    .icon-scroll-screen {
+        position: relative;
+        width: 16px;
+        height: 27px;
+        margin: 11px auto 0;
+        border: 1px solid #acafb1;
+    }
+
+    .icon-scroll:before {
+        top: 33px;
+    }
+
+    @-webkit-keyframes scroll {
+        0% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
+            -webkit-transform: translateY(-23px);
+            transform: translateY(-23px);
+        }
+    }
+
+    @keyframes scroll {
+        0% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
+            -webkit-transform: translateY(-23px);
+            transform: translateY(-23px);
+        }
+    }
 }
 
 /*
@@ -437,9 +485,7 @@ table {
     line-height: 26px;
 }
 
-
-
-#mainSlider{
+#mainSlider {
     height: 450px;
     overflow: hidden;
 }
@@ -488,17 +534,17 @@ table {
 
 }
 
-@media all and (max-width:680px){
-    #mainSlider{
+@media all and (max-width: 680px) {
+    #mainSlider {
         height: auto;
         overflow: hidden;
     }
 
-    .about-us-content .section-header{
+    .about-us-content .section-header {
         margin-bottom: 10px;
     }
 
-    .home-about-us .cj-container{
+    .home-about-us .cj-container {
         padding-bottom: 80px;
     }
 }
@@ -536,10 +582,10 @@ table {
     display: block;
 }
 
-   .project-items {
-        width: 90%;
-        padding-left: 1%;
-    }
+.project-items {
+    width: 90%;
+    padding-left: 1%;
+}
 
 p.partners-number-medium {
     font-size: 50px;
@@ -601,8 +647,8 @@ p.partners-number-medium {
     }
 }
 
-
 .success-ico-color {
+    font-family: 'Helvetica Neue Cyr Bold';
     background: linear-gradient(90deg, #b0010b 50%, #b0010b 50%, #f8292d);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -617,9 +663,9 @@ p.partners-number-medium {
     text-align: center;
 }
 
-@media all and (max-width:680px) {
+@media all and (max-width: 680px) {
 
-    .project-item{
+    .project-item {
         display: flex;
         justify-content: space-between;
         padding-bottom: 15px;
@@ -630,20 +676,21 @@ p.partners-number-medium {
 
     .project-item p {
         display: inline-block;
-        font-family: 'Helvetica Neue Cyr Bold';
+        font-family: sans-serif;
         font-size: 19px;
         line-height: 25px;
         margin-bottom: 0;
         text-align: center;
+        font-weight:100;
     }
 
-    .project-items .col-md-4{
+    .project-items .col-md-4 {
         padding: 0;
     }
 
-    .project-items .row{
-      margin-right: 0px; 
-      margin-left: 0px; 
+    .project-items .row {
+        margin-right: 0;
+        margin-left: 0;
     }
 
     .project-items {
@@ -659,17 +706,17 @@ p.partners-number-medium {
         margin-bottom: 0;
     }
 
-    .project-item-middle{
-         border-left: none;
+    .project-item-middle {
+        border-left: none;
         border-right: none;
     }
 
-    .partners-number-medium{
+    .partners-number-medium {
         font-size: 25px;
         height: 25px;
     }
 
-    .partners-number-medium span{
+    .partners-number-medium span {
         display: inline-block;
         font-size: 19px;
         height: 25px;
@@ -677,7 +724,7 @@ p.partners-number-medium {
         font-weight: 100;
     }
 
-    .project-item-last{
+    .project-item-last {
         border-bottom: #e1dede solid 1px;
     }
 
@@ -696,9 +743,11 @@ p.partners-number-medium {
 .home-news .cj-container {
     padding-bottom: 40px;
 }
-.home-news .cj-btn-container{
+
+.home-news .cj-btn-container {
     padding-top: 30px;
 }
+
 @media all and (min-width: 720px) {
 
     .home-news .section-header {
@@ -804,8 +853,8 @@ p.partners-number-medium {
 
 }
 
-@media all and (max-width:680px){
-     .news-item {
+@media all and (max-width: 680px) {
+    .news-item {
         padding-bottom: 10px;
     }
 }
@@ -840,9 +889,9 @@ p.partners-number-medium {
 
 @media all and (min-width: 1025px) {
 
-   .home-partners .cj-container {
-    padding-bottom: 180px;
-}
+    .home-partners .cj-container {
+        padding-bottom: 180px;
+    }
 
 }
 
@@ -862,9 +911,9 @@ p.partners-number-medium {
     width: 51px;
     height: 107px;
     background-repeat: no-repeat;
-    -moz-background-size: 100%; /* Firefox 3.6+ */
-    -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
-    -o-background-size: 100%; /* Opera 9.6+ */
+    -moz-background-size: 100%;
+    -webkit-background-size: 100%;
+    -o-background-size: 100%;
     background-size: 100%;
     cursor: pointer;
 }
@@ -934,5 +983,34 @@ p.partners-number-medium {
     .partner-item img {
         width: 225px !important;
         text-align: center;
+    }
+}
+@media all and (max-width: 680px) {
+    .partners-next-container,
+    .partners-prev-container{
+        display: none;
+    }
+    .owl-dots {
+        display: flex;
+        justify-content: center;
+    }
+    .owl-dot{
+        background-color: #444 !important;
+        width: 20px;
+        height: 20px;
+        margin: 0 10px;
+        border-radius: 30px;
+    }
+
+    .owl-dot:focus {
+        outline:0;
+    }
+
+    .owl-carousel {
+        width: 90%;
+    }
+
+    button.owl-dot.active{
+        background-color: #666 !important;
     }
 }
