--- a/css/common.css
+++ b/css/common.css
@@ -62,3 +62,14 @@ table {
         padding-left: 5%;
     }
 }
+
+.section-header {
+    padding-left: 10px;
+    margin-bottom: 20px;
+    font-size: 20px;
+    height: 18px;
+    line-height: 20px;
+    border-left: 4px #e30808 solid;
+    font-family: 'Helvetica Neue Cyr Bold';
+    font-weight: 700;
+}
