--- a/css/about.css
+++ b/css/about.css
@@ -223,16 +223,21 @@
 	color: #fff;
 	font-family: 'Helvetica Neue Cyr Bold';
 	font-size: 40px;
+	
 }
 
 .about-projects-service {
-	background: #000 url('../img/sistema-de-gestao.png') 100% 100%;
+	background-blend-mode: multiply;
+	background-image: url('../img/sistema-de-gestao.png');
 	-webkit-background-size: cover;
 	background-size: cover;
+	background-color: rgba( 0, 0, 0, 0.8);
 }
 
 .about-projects-link {
-	background: #000 url('../img/global-business.jpg') 100% 100%;
+	background-blend-mode: multiply;
+	background: url('../img/global-business.jpg') 100% 100%;
 	-webkit-background-size: cover;
 	background-size: cover;
+	background-color: rgba( 0, 0, 0, 0.8);
 }
