--- a/css/about.css
+++ b/css/about.css
@@ -91,7 +91,7 @@
 	margin-left: 5%;
 	margin-right: 5%;
 	text-align: justify;
-	font-size: 20px;
+	font-size: 17px;
 	font-family: 'HELVETICAMEDIUM';
 }
 
@@ -181,9 +181,10 @@
 .team-member article {
 	width: 300px;
 	margin: auto;
-	font-size: 20px;
-	line-height: 23px;
+	font-size: 17px;
+	line-height: 19px;
 	font-family: 'HELVETICAMEDIUM';
+	text-align: justify;
 }
 
 .row.team-members {
