--- a/css/home.css
+++ b/css/home.css
@@ -472,12 +472,17 @@
     }
 
     .about-us-content .section-header {
-        margin-bottom: 10px;
+        margin-bottom: 25px;
     }
 
     .home-about-us .cj-container {
         padding-bottom: 80px;
     }
+
+    .home-about-us .cj-btn-container{
+       margin-top: 30px; 
+    }
+
     .about-us-content p{
         margin-bottom: 0px;
     }
@@ -606,6 +611,14 @@ p.partners-number-medium {
         padding-top: 15px;
         border-top: #e1dede solid 1px;
         width: 100%;
+    }
+
+    .home-projects .cj-container{
+       padding-bottom: 30px;
+    }
+
+    .home-projects .cj-btn-container{
+       margin-top: 30px; 
     }
 
     .project-item p {
@@ -741,6 +754,7 @@ p.partners-number-medium {
 }
 
 @media all and (min-width: 720px) {
+
     .news-items {
         width: 93%;
         margin-right: 7%;
@@ -786,6 +800,14 @@ p.partners-number-medium {
 @media all and (max-width: 680px) {
     .news-item {
         padding-bottom: 10px;
+    }
+
+    .home-news .cj-container {
+        padding-bottom: 30px;
+    }
+
+    .home-news .cj-btn-container {
+        margin-top: 30px;
     }
 }
 
