--- a/css/about.css
+++ b/css/about.css
@@ -103,26 +103,49 @@
 */
 
 .about-sub-title {
-	background-image: url('../img/about-sub-title-bg.png');
-	-webkit-background-size: cover;
-	background-size: cover;
-	height: 650px;
-	width: 100%;
-}
-
-.about-sub-title .cover-bg {
-	width: inherit;
-	height: inherit;
-	background-image: url('../img/overlay.png');
+    overflow: hidden;
+    height: 500px;
 }
 
 .about-sub-title .cj-container {
+	position: relative;
 	padding-left: 0;
 	background: transparent;
-	height: inherit;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 100%;
+    overflow: hidden;
+}
+
+.about-sub-title .cover-bg {
+	position: absolute;
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: center;
+	top: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	height: inherit;
+	background-image: url('../img/overlay.png');
+	z-index: 4;
+	overflow: hidden;
+}
+
+.about-sub-title .cover-bg img{
+	margin-top: 8%;
+}
+
+.about-sub-title .about-video {
+	position: absolute;
+	top: -30%;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-image: url('../img/about-sub-title-bg.png');
+	-webkit-background-size: cover;
+	background-size: cover;
+	z-index: 0;
 }
 
 /*
