--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,10 @@
+@media all and (max-width: 680px){
+
+}
+
+@media all and (max-width: 1024px){
+
+}
 
 /*
 █████████████████████████
@@ -103,8 +110,59 @@
 */
 
 .about-sub-title {
+	height: 500px;
     overflow: hidden;
-    height: 500px;
+}
+
+.about-sub-title .cover-bg img {
+	margin-top: 8%;
+}
+
+@media all and (max-width: 1118px) {
+
+	.about-sub-title {
+		height: 440px;
+	}
+}
+
+@media all and (max-width: 990px) {
+
+	.about-sub-title {
+		height: 390px;
+	}
+}
+
+@media all and (max-width: 876px) {
+
+	.about-sub-title {
+		height: 340px;
+	}
+}		
+
+@media all and (max-width: 743px) {
+
+	.about-sub-title {
+		height: 280px;
+	}
+}
+
+@media all and (max-width: 680px){
+	.about-sub-title {
+		height: 240px;
+	}
+
+}
+
+@media all and (max-width: 435px){
+	.about-sub-title {
+		height: 170px;
+	}
+}
+
+@media all and (max-width: 323px){
+	.about-sub-title {
+		height: 100px;
+	}
 }
 
 .about-sub-title .cj-container {
@@ -126,19 +184,15 @@
 	left: 0;
 	right: 0;
 	width: 100%;
-	height: inherit;
+	height: 100%;
 	background-image: url('../img/overlay.png');
 	z-index: 4;
 	overflow: hidden;
 }
 
-.about-sub-title .cover-bg img{
-	margin-top: 8%;
-}
-
 .about-sub-title .about-video {
 	position: absolute;
-	top: -30%;
+	top: -20%;
 	left: 0;
 	width: 100%;
 	height: 100%;
@@ -147,6 +201,17 @@
 	background-size: cover;
 	z-index: 0;
 }
+
+
+@media all and (max-width: 1024px) {
+
+	.about-sub-title .cover-bg img {
+		width: 40%;
+		margin:8% auto 0;
+	}
+}
+
+
 
 /*
 ███████████████████████
