--- a/css/about.css
+++ b/css/about.css
@@ -330,3 +330,37 @@
 	background-size: cover;
 
 }
+
+@media all and (max-width: 1024px){
+	
+	.about-links .links-container a {
+		line-height: 150px;
+	}
+
+	.about-projects-service,
+	.about-projects-link {
+		height: 150px;
+	}
+}
+
+@media all and (max-width: 680px){
+
+	.about-links .links-container a {
+		line-height: 100px;
+		font-size: 20px;
+	}
+
+	.about-links .links-container a img{
+		width: 30px;
+	}
+
+	.about-projects-service,
+	.about-projects-link {
+		height: 100px;
+	}
+
+	.about-links .links-container {
+		padding: 0 2% 60px;
+	}
+
+}
