Updating About us page
+Added anoimation

--- a/css/about.css
+++ b/css/about.css
@@ -79,6 +79,14 @@
 	display: none;
 }
 
+@media all and (max-width: 1400px){
+	.breadcrumbs {
+		margin-left: 5%;
+		margin-right: 5%;
+	}
+}
+
+
 /*
 ██████████████████████████████████████████████████████████████
 █────███───██───██────██────██───██────██───██───██────██─██─█
