--- a/css/common.css
+++ b/css/common.css
@@ -60,16 +60,12 @@ table {
 
 .cj-container {
     width: 100%;
-    padding-left: 5%;
-    margin: auto;
     background-color: #fff;
 }
 
 @media all and (min-width: 1400px) {
     .cj-container {
         width: 1400px;
-        margin: auto;
-        padding-left: 5%;
     }
 }
 
@@ -106,6 +102,7 @@ table {
     background-color: transparent;
     padding-left: 0;
     height: inherit;
+    margin:auto;
 }
 
 .page-title h1 {
@@ -116,6 +113,12 @@ table {
     margin-left: 5%;
     margin-right: 5%;
     margin-bottom: 50px;
+}
+
+.page-titke-overlay {
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 500px;
+    width: 100%;
 }
 
 /*
@@ -186,6 +189,7 @@ table {
 
 .bottom-links .cj-container {
     padding-left: 0;
+    margin:auto;
 }
 
 .bottom-links-container {
