--- a/css/home.css
+++ b/css/home.css
@@ -84,10 +84,12 @@
     position: relative;
     width: 100%;
     height: 500px;
+    margin:auto;
 }
 
 .home-title .cj-container {
     background-color: inherit;
+    margin: auto;
 }
 
 .home-title-bg {
@@ -122,6 +124,7 @@
     align-items: center;
     position: relative;
     justify-content: center;
+    margin:auto;
 }
 
 .home-title h1 {
@@ -363,6 +366,8 @@
     padding-bottom: 180px;
     display: flex;
     flex-direction: column;
+    margin: auto;
+    padding-left: 5%;
 }
 
 .home-about-us .about-us-content {
@@ -501,6 +506,7 @@
 .home-projects .cj-container {
     padding-bottom: 40px;
     display: block;
+    padding-left: 5%;
 }
 
 .project-item {
@@ -689,6 +695,7 @@ p.partners-number-medium {
 
 .home-news .cj-container {
     padding-bottom: 40px;
+    padding-left: 5%;
 }
 
 @media all and (min-width: 720px) {
