--- a/css/services.css
+++ b/css/services.css
@@ -1,1 +1,113 @@
-services.css
+/*
+██████████████████████████████████████
+█────███───██───██────██─█─██─████───█
+█─██──██─████─████─██─██─█─██─█████─██
+█─██──██───██───██─██─██─█─██─█████─██
+█─██──██─████─████─██─██─█─██─█████─██
+█────███───██─████────██───██───███─██
+██████████████████████████████████████
+*/
+
+.sevise-border {
+	padding: 30px;
+	margin: 0 5%;
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+.services-description .cj-container h2,
+.main-service .cj-container h2 {
+	padding: 0 5%;
+	text-align: center;
+	font-size: 30px;
+	font-family: 'Helvetica Neue Cyr Bold';
+}
+
+.main-service .cj-container h2 span {
+	display: inline-block;
+	padding: 9px 17px;
+	margin-right: 10px;
+	background-color: #e30808;
+	color: #fff;
+}
+
+/*
+██████████████████████████████████████████████████████████████
+█────███───██───██────██────██───██────██───██───██────██─██─█
+█─██──██─████─████─██─██─██─███─███─██─███─████─███─██─██──█─█
+█─██──██───██───██─█████────███─███────███─████─███─██─██─█──█
+█─██──██─██████─██─██─██─█─████─███─██████─████─███─██─██─██─█
+█────███───██───██────██─█─███───██─██████─███───██────██─██─█
+██████████████████████████████████████████████████████████████
+*/
+
+.services-description .cj-container {
+	padding-top: 80px;
+	padding-bottom: 80px;
+	margin:auto;
+}
+
+.services-description .cj-container article {
+	padding: 60px 5% 0;
+	font-family: 'HELVETICAMEDIUM';
+	font-size: 20px;
+}
+
+.services-description .cj-container p {
+	text-align: justify;
+	padding-bottom: 20px;
+}
+
+.services-description .cj-container ul {
+	list-style: circle;
+	padding-bottom: 20px;
+	padding-left: 35px;
+}
+
+/*
+█████████████████████████████████████████████████████████████████████████████████████████████████████
+█─███──█────██───██─██─███████───██───██────██─█─██───██────██───███████────███─████────██────██─██─█
+█──█───█─██─███─███──█─███████─████─████─██─██─█─███─███─██─██─█████████─██──██─████─██─██─██─██─█─██
+█─█─█──█────███─███─█──██───██───██───██────██─█─███─███─█████───██───██────███─████─██─██─█████──███
+█─███──█─██─███─███─██─█████████─██─████─█─███───███─███─██─██─█████████─██──██─████─██─██─██─██─█─██
+█─███──█─██─██───██─██─███████───██───██─█─████─███───██────██───███████────███───██────██────██─██─█
+█████████████████████████████████████████████████████████████████████████████████████████████████████
+*/
+
+.main-service .cj-container {
+	padding-bottom: 80px;
+	margin:auto;
+}
+
+.main-service p {
+	text-align: center;
+	font-family: 'HELVETICAMEDIUM';
+	font-size: 20px;
+	margin-bottom: 10px;
+}
+
+.main-service article {
+	padding-top: 60px;
+}
+
+/*
+███████████████████████████████████████████████████████████████████████████
+█────██───██─██─██───██────███████───██───██────██─█─██───██────██───██───█
+█─██─███─███─██─██─████─██─███████─████─████─██─██─█─███─███─██─██─████─███
+█────███─███────██───██────██───██───██───██────██─█─███─███─█████───██───█
+█─██─███─███─██─██─████─█─██████████─██─████─█─███───███─███─██─██─██████─█
+█─██─███─███─██─██───██─█─████████───██───██─█─████─███───██────██───██───█
+███████████████████████████████████████████████████████████████████████████
+*/
+
+.ather-services .cj-container {
+	padding-bottom: 80px;
+	margin:auto;
+}
+
+.ather-services .row {
+    margin-right: 0;
+    margin-left: 0;
+}
+
