--- a/css/services.css
+++ b/css/services.css
@@ -17,19 +17,34 @@
 }
 
 .services-description .cj-container h2,
-.main-service .cj-container h2 {
+.main-service .cj-container h2,
+.ather-services .cj-container .service-list-item h2 {
 	padding: 0 5%;
 	text-align: center;
 	font-size: 30px;
 	font-family: 'Helvetica Neue Cyr Bold';
 }
 
-.main-service .cj-container h2 span {
+.main-service .cj-container h2 span,
+.ather-services .cj-container .service-list-item h2 span {
 	display: inline-block;
 	padding: 9px 17px;
 	margin-right: 10px;
 	background-color: #e30808;
 	color: #fff;
+}
+
+.services-description .cj-container ul,
+.ather-services .cj-container .service-list-item ul {
+	list-style: circle;
+	padding-bottom: 20px;
+	padding-left: 35px;
+}
+
+.services-description .cj-container article,
+.ather-services-wrapper.row .service-list-item article {
+	font-family: 'HELVETICAMEDIUM';
+	font-size: 20px;
 }
 
 /*
@@ -50,19 +65,11 @@
 
 .services-description .cj-container article {
 	padding: 60px 5% 0;
-	font-family: 'HELVETICAMEDIUM';
-	font-size: 20px;
 }
 
 .services-description .cj-container p {
 	text-align: justify;
 	padding-bottom: 20px;
-}
-
-.services-description .cj-container ul {
-	list-style: circle;
-	padding-bottom: 20px;
-	padding-left: 35px;
 }
 
 /*
@@ -102,12 +109,79 @@
 */
 
 .ather-services .cj-container {
-	padding-bottom: 80px;
+	padding-bottom:80px; 
 	margin:auto;
 }
 
-.ather-services .row {
-    margin-right: 0;
+.ather-services-wrapper.row {
+	margin-right: 0;
     margin-left: 0;
+    padding: 0 5%;
+    height: inherit;
 }
 
+.ather-services-wrapper.row .col-sm-12,
+.ather-services-wrapper.row .col-md-6,
+.ather-services-wrapper.row .col-lg-4 {
+	padding-left: 0;
+	padding-right: 0;
+	height: inherit;
+}
+
+.ather-services-wrapper.row .sevise-border {
+	margin: 0;
+	width: 95%;
+	height: 100%;
+}
+
+.ather-services-wrapper.row .service-list-item {
+	display: flex;
+}
+
+.ather-services-wrapper.row .service-list-item:nth-child(1) {
+	justify-content: flex-start;
+}
+
+.ather-services-wrapper.row .service-list-item:nth-child(2) {
+	justify-content: center;
+}
+
+.ather-services-wrapper.row .service-list-item:nth-child(3) {
+	justify-content: flex-end;
+}
+
+.ather-services-wrapper.row .service-list-item article {
+	padding-top: 30px;
+}
+
+/*
+█████████████████████████████████████████████████████████████████████████████
+█────██────██─████─█████████───██────███████────██────██───██───██────██─██─█
+█─██─██─██─██─████─██████████─███─██─███████─██─██─██─███─████─███─██─██──█─█
+█─█████────██─████─████───███─███─██─██───██────██─██████─████─███─██─██─█──█
+█─██─██─██─██─████─██████████─███─██─███████─██─██─██─███─████─███─██─██─██─█
+█────██─██─██───██───████████─███────███████─██─██────███─███───██────██─██─█
+█████████████████████████████████████████████████████████████████████████████
+*/
+
+.services-call-to-action .cj-container{
+	padding-bottom:80px; 
+	margin:auto;
+}
+
+.services-call-to-action .cj-container h3{
+    font-size: 54px;
+    line-height: 54px;
+    text-align: center;
+    font-family: 'HELVETICAMEDIUM';
+    text-transform: uppercase;
+    text-fill-color: transparent;
+    -webkit-text-fill-color: transparent;
+    background:  -webkit-gradient(linear, left, right, color-stop(50%, #b0010b), color-stop(50%, #f8292d));
+    background: -webkit-linear-gradient(#b0010b 50%, #f8292d 50%) no-repeat;
+    background: linear-gradient(90deg, #b0010b 50%, #b0010b 50%, #f8292d);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+     background-clip: text;
+	color: #f8292d;
+}
