--- a/css/about.css
+++ b/css/about.css
@@ -176,11 +176,13 @@
 	margin-bottom: 70px;
 }
 
-.team-member img {
+.team-member .team-member-photo {
 	display: block;
 	width: 300px;
 	height: 300px;
 	margin: 0 auto 30px;
+	-webkit-background-size: 300px auto;
+	background-size: 300px auto;
 }
 
 .member-name {
